Add Starlii and power star

--- a/src/main/resources/assets/unnamed_minecraft_mod/lang/en_us.json
+++ b/src/main/resources/assets/unnamed_minecraft_mod/lang/en_us.json
@@ -1,1 +1,5 @@
-{}
+{
+  "item.unnamed_minecraft_mod.power_star": "Power Star",
+  "item.unnamed_minecraft_mod.starlii_spawn_egg": "Starlii Spawn Egg",
+  "entity.unnamed_minecraft_mod.starlii": "Starlii"
+}
